--- a/take-a-seat/package.json
+++ b/take-a-seat/package.json
@@ -1,8 +1,15 @@
 {
     "name": "take-a-seat",
     "dependencies": {
-        "react": "^15.5.4",
-        "react-dom": "^15.5.4"
+        "eslint-plugin-disable": "^2.0.3",
+        "primeflex": "^3.3.0",
+        "primeicons": "^6.0.1",
+        "primereact": "^8.7.3",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.6.0",
+        "react-scripts": "^5.0.1",
+        "url-loader": "^4.1.1"
     },
     "version": "0.1.0",
     "devDependencies": {
@@ -19,7 +26,7 @@
         "eslint-plugin-jsx-a11y": "^5.0.1",
         "eslint-plugin-react": "^7.0.1",
         "extract-text-webpack-plugin": "^2.1.0",
-        "file-loader": "^0.11.1",
+        "file-loader": "^0.11.2",
         "html-webpack-plugin": "^2.28.0",
         "json-loader": "^0.5.4",
         "postcss-flexbugs-fixes": "^3.0.0",
