--- a/take-a-seat/package.json
+++ b/take-a-seat/package.json
@@ -2,6 +2,7 @@
     "name": "take-a-seat",
     "dependencies": {
         "eslint-plugin-disable": "^2.0.3",
+        "jwt-decode": "^3.1.2",
         "primeflex": "^3.3.0",
         "primeicons": "^6.0.1",
         "primereact": "^8.7.3",
