--- a/TakeASeat/appsettings.json
+++ b/TakeASeat/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost\\sqlexpress;database=TakeASeat;trusted_connection=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=eventsDb;Database=eventsDb;User Id=sa;Password=Password123;Trusted_connection=false;TrustServerCertificate=true;Encrypt=false;"
   },
   "Logging": {
     "LogLevel": {
